// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SwitchToggle] when switch toggle is off renders as off state 1`] = `
<View
  accessibilityRole="switch"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "padding": 6,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(128, 128, 128, 1)",
        "flexDirection": "row",
        "padding": 5,
        "paddingLeft": 5,
        "paddingRight": 5,
      }
    }
  >
    <View
      style={
        Object {
          "opacity": 1,
          "padding": 3,
        }
      }
    >
      <Text>
        off
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(510, 0, -255, 1)",
          "padding": 1,
          "transform": Array [
            Object {
              "translateX": NaN,
            },
          ],
        }
      }
    />
  </View>
</View>
`;

exports[`[SwitchToggle] when switch toggle is on renders as on state 1`] = `
<View
  accessibilityRole="switch"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "padding": 6,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 128, 0, 1)",
        "flexDirection": "row",
        "padding": 5,
        "paddingLeft": 5,
        "paddingRight": 5,
      }
    }
  >
    <View
      style={
        Object {
          "opacity": 1,
          "padding": 4,
        }
      }
    >
      <Text>
        on
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 255, 1)",
          "padding": 1,
          "transform": Array [
            Object {
              "translateX": NaN,
            },
          ],
        }
      }
    />
  </View>
</View>
`;
